Hid main menu elements

--- a/style.css
+++ b/style.css
@@ -186,3 +186,7 @@ body {
     filter: brightness(105%);
     box-shadow: 0px 2px 7px rgba(0, 0, 0, 0.2);
 }
+
+.hidden {
+    display: none !important;
+}
