--- a/style.css
+++ b/style.css
@@ -155,7 +155,7 @@ body {
     height: 35%;
     margin-top: 100px;
     display: flex;
-    justify-content: center;
+justify-content: center;
     align-items: center;
 }
 
@@ -163,8 +163,7 @@ body {
     font-family: 'Press Start 2P', sans-serif;
     font-size: 150px;
     color: #feabbf;
-    text-shadow:
-        9px 9px 0 #3f4f96;
+    text-shadow: 9px 9px 0 #3f4f96;
 }
 
 #start-button {
@@ -177,8 +176,7 @@ body {
     font-family: 'Press Start 2P', sans-serif;
     margin-top: 120px;
     padding: 15px 35px;
-    text-shadow:
-        5px 5px 0 #3f4f96;
+    text-shadow: 5px 5px 0 #3f4f96;
     transition: all 0.3s ease;
 }
 
@@ -189,4 +187,53 @@ body {
 
 .hidden {
     display: none !important;
+}
+
+#sheldon-text {
+    width: 95%;
+    font-family: 'Press Start 2P', sans-serif;
+    font-size: 70px;
+    color: #feabbf;
+    text-shadow: 9px 9px 0 #3f4f96;
+    margin-top: 10px;
+    text-align: center;
+}
+
+#sheldon-div {
+    margin-top: 40px;
+    width: 300px;
+    height: 400px;
+    background-color: #fdb760;
+    border: 25px solid #3f4f96;
+    border-radius: 20px;
+    display: flex;
+    justify-content: center;
+}
+
+#sheldon-text.fade-in, #sheldon-div.fade-in {
+    animation: fadeIn 0.5s ease-out;
+}
+
+
+#sheldon-text.fade-out, #sheldon-div.fade-out{
+    opacity: 0;
+    transition: opacity 0.5s ease-out;
+}
+
+.character {
+    object-fit: cover;
+    height: 390px;
+    margin-top: 5px;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(-20px); 
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
