--- a/style.css
+++ b/style.css
@@ -189,7 +189,7 @@ justify-content: center;
     display: none !important;
 }
 
-#sheldon-text {
+#sheldon-text, #character-text {
     width: 95%;
     font-family: 'Press Start 2P', sans-serif;
     font-size: 70px;
@@ -210,7 +210,7 @@ justify-content: center;
     justify-content: center;
 }
 
-#sheldon-text.fade-in, #sheldon-div.fade-in {
+#sheldon-text.fade-in, #sheldon-div.fade-in, #character-text.fade-in, .character-div.fade-in {
     animation: fadeIn 0.5s ease-out;
 }
 
@@ -224,6 +224,30 @@ justify-content: center;
     object-fit: cover;
     height: 390px;
     margin-top: 5px;
+}
+
+#characters-container {
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+}
+
+.character-div {
+    margin-top: 40px;
+    width: 300px;
+    height: 400px;
+    background-color: #fdb760;
+    border: 25px solid #3f4f96;
+    border-radius: 20px;
+    display: flex;
+    justify-content: center;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.character-div:hover {
+    background-color: #feabbf; 
+    box-shadow: 0px 2px 7px rgba(0, 0, 0, 0.2);
 }
 
 @keyframes fadeIn {
