--- a/style.css
+++ b/style.css
@@ -199,7 +199,7 @@ body {
     text-align: center;
 }
 
-#leonard-chosen-text, #howard-chosen-text, #raj-chosen-text {
+#leonard-chosen-text, #howard-chosen-text, #raj-chosen-text, #game-over-text {
     width: 95%;
     font-family: 'Press Start 2P', sans-serif;
     font-size: 70px;
@@ -326,6 +326,16 @@ body {
     text-shadow: 3px 3px 0 #4f341c;
     margin-top: auto;
     margin-bottom: auto;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+
+#round-text {
+    font-family: 'Press Start 2P', sans-serif;
+    font-size: 25px;
+    color: #f2ead7;
+    text-shadow: 3px 3px 0 #4f341c;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
