--- a/style.css
+++ b/style.css
@@ -25,8 +25,9 @@ body {
     border: 3px solid #363747;
     padding: 20px;
     border-radius: 50px;
-    width: 70vw;
-    height: 85vh;
+    width: 90vw;
+    max-width: 1200px;
+    aspect-ratio: 70 / 85;
     display: flex;
     flex-direction: column;
     align-items: center;
