--- a/style.css
+++ b/style.css
@@ -1,23 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
-body {
+html, body {
     margin: 0;
     padding: 0;
+    width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 
-.horizontal-split {
-    min-height: 100vh;
+body {
     background-image: linear-gradient(
         to bottom,
         #f5eedf 50%, /* cream*/
         #a1c690 50%  /* green */
     );
+}
 
+#viewport-wrapper {
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-
 }
 
 #monitor {
@@ -25,11 +29,13 @@ body {
     border: 3px solid #363747;
     padding: 20px;
     border-radius: 50px;
-    width: 70vw;
-    height: 85vh;
+    width: 1200px;
+    height: 800px;
+    flex-shrink: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
 }
 
 #screen-border {
@@ -124,26 +130,26 @@ body {
 }
 
 #cloud1 {
-    top: 18%;
-    left: 23%;
+    top: 15%;
+    left: 16%;
     width: 150px;
 }
 
 #cloud2 {
-    top: 46%;
-    left: 19.45%;
+    top: 47%;
+    left: 7.75%;
     width: 85px;
 }
 
 #cloud3 {
-    top: 18%;
-    right: 23%;
+    top: 17%;
+    right: 19%;
     width: 150px;
 }
 
 #cloud4 {
     top: 22%;
-    right: 19.45%;
+    right: 7.75%;
     width: 83px;
 }
 
@@ -161,7 +167,7 @@ body {
 
 #title {
     font-family: 'Press Start 2P', sans-serif;
-    font-size: 150px;
+    font-size: 120px;
     color: #feabbf;
     text-shadow: 9px 9px 0 #3f4f96;
 }
@@ -192,7 +198,7 @@ body {
 #sheldon-text, #character-text {
     width: 95%;
     font-family: 'Press Start 2P', sans-serif;
-    font-size: 70px;
+    font-size: 60px;
     color: #feabbf;
     text-shadow: 9px 9px 0 #3f4f96;
     margin-top: 10px;
@@ -214,8 +220,8 @@ body {
 
 #sheldon-div {
     margin-top: 40px;
-    width: 300px;
-    height: 400px;
+    width: 25%;
+    height: 57%;
     background-color: #fdb760;
     border: 25px solid #3f4f96;
     border-radius: 20px;
@@ -235,20 +241,22 @@ body {
 
 .character {
     object-fit: cover;
-    height: 390px;
+    height: 97%;
     margin-top: 5px;
 }
 
 #characters-container {
     display: flex;
     justify-content: center;
+    width: 90%;
+    height: 57%;
     gap: 30px;
 }
 
 .character-div {
     margin-top: 40px;
-    width: 300px;
-    height: 400px;
+    width: 25%;
+    height: 100%;
     background-color: #fdb760;
     border: 25px solid #3f4f96;
     border-radius: 20px;
@@ -477,3 +485,5 @@ body {
     50% { transform: translateY(-30px) scaleX(-1) rotate(180deg); }
     100% { transform: translateY(0) scaleX(-1) rotate(180deg); }
 }
+
+
